<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Login">


    <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:hint="@string/usernamePlaceHolder"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="60dp" android:layout_marginTop="124dp"
            app:layout_constraintTop_toTopOf="parent"/>

    <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/passwordPlaceHolder"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="52dp" android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/usernameEditText"/>

    <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginButton"
            tools:layout_editor_absoluteY="338dp" tools:layout_editor_absoluteX="158dp"/>

</android.support.constraint.ConstraintLayout>