<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:id="@+id/usernameTextView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/empty_username" tools:layout_editor_absoluteY="201dp"
            tools:layout_editor_absoluteX="160dp"/>

    <TextView
            android:id="@+id/passwordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_password"
            app:layout_constraintStart_toStartOf="@+id/logoutButton"
            app:layout_constraintEnd_toEndOf="@+id/logoutButton" android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/usernameTextView"/>

    <Button
            android:id="@+id/logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/logout_button"
            tools:layout_editor_absoluteX="148dp" android:layout_marginTop="100dp"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextView"/>

</android.support.constraint.ConstraintLayout>